remove static file

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
       { "src": "app.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/uploads/(.*)", "dest": "/uploads/$1" },
+      { "src": "/uploads/(.*)", "dest": "/uploads" },
       { "src": "/(.*)", "dest": "app.js" }
     ]
   }
