--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 
-{
+  {
     "version": 2,
     "builds": [
       { "src": "app.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/uploads/(.*)", "dest": "uploads/$1" },
+      { "src": "/uploads/(.*)", "dest": "app.js" },
       { "src": "/(.*)", "dest": "app.js" }
     ]
   }
